try create task issue on mobile

--- a/src/components/taskcreate.css
+++ b/src/components/taskcreate.css
@@ -677,6 +677,7 @@
 .card_body_wrapper
 {
     height: 500px;
+    width: 100%;
 }
 
 
